# wheather_app

./: .env  Cargo.toml  Makefile  README.md  data.db
configuration/: base.yaml
configuration/certs/: cert.pem  key.pem
migrations/: 20240920071759_create_users_table.sql
src/: configuration.rs  lib.rs  main.rs  start.rs  token.rs
src/user/: middleware.rs  mod.rs
src/user/login/: api.rs  error.rs  model.rs
src/user/register/: api.rs  error.rs  mod.rs  model.rs
src/weather/: api.rs  error.rs  mod.rs  model.rs
tests/api/: login.rs  main.rs  register.rs  weather.rs
