[package]
name = "wheather_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
poem = { version = "3", features = ["tower-compat", "rustls"] }
poem-openapi = { version = "5", features = ["swagger-ui", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.14.0", features = ["yaml"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
reqwest = { version = "0.12.7", features = ["json"] }
thiserror = "1.0.63"
log = "0.4.22"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
quick_cache = "0.6.9"
tower = { version = "0.4.8", default-features = false, features = ["limit"] }
tracing-subscriber = "0.3.18"


[dev-dependencies]
serde_json = "1.0.128"
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6.2"
